separo en pages

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -29,7 +29,8 @@
                 Enviar
             </button>
         </div>
-
     </form>
 
 </div>
+
+<ngx-loading [show]="loading"  [config]="{ backdropBorderRadius: '3px', fullScreenBackdrop: true }" ></ngx-loading>
