--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -115,7 +115,7 @@
   <img src={{urlImagen}} width="50px" height="50px" alt="">
   <img src={{urlImagen2}} width="50px" height="50px" alt="">
 
-  <ngx-loading [show]="loading" ></ngx-loading>
+  <ngx-loading [show]="loading"  [config]="{ backdropBorderRadius: '3px', fullScreenBackdrop: true }" ></ngx-loading>
 
 
 </div>
