navbar y ingresos rapidos

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -24,12 +24,18 @@
             </small>
         </div>
 
-        <div class="col-md-12 d-grid gap-2">
+        <div class="col-md-12 d-grid gap-2 mb-3">
             <button type="submit" class="btn btn-primary btn-block">
                 Enviar
             </button>
         </div>
     </form>
+    
+    <div class="col-md-12 d-grid gap-2">
+        <button type="button" name="" id="" class="btn btn-secondary" (click)="ingresaAdministrador()">Administrador</button>
+        <button type="button" name="" id="" class="btn btn-tertiary" (click)="ingresaEspecialista()" >Especialista</button>
+        <button type="button" name="" id="" class="btn btn-secondary" (click)="ingresaPaciente()">Paciente</button>
+    </div>  
 
 </div>
 
