--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,5 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <div class="container-fluid">
-        
         <a class="navbar-brand" (click)="goToBienvenida()" ><img src="./assets/icono.png" height="50px" width="50px"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarID"
             aria-controls="navbarID" aria-expanded="false" aria-label="Toggle navigation">
@@ -12,6 +11,7 @@
                 <a class="nav-link " aria-current="page" (click)="goToLogin()" >Login</a>
                 <a class="nav-link " aria-current="page" (click)="goToRegistro()" >Registro</a>
             </div>
+            <label *ngIf="auth.currentUser" align="right" for="" style="color: white;">{{auth.currentUser.correo}}</label>
         </div>
     </div>
 </nav>
