--- a/src/app/pages/usuarios/usuarios.component.html
+++ b/src/app/pages/usuarios/usuarios.component.html
@@ -1,9 +1,9 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <button type="button" class="btn btn-outline-primary" (click)="boton('administradores')" >Tabla de administradores</button>
-            <button type="button" class="btn btn-outline-primary" (click)="boton('especialistas')" >Tabla de especialistas</button>
-            <button type="button" class="btn btn-outline-primary" (click)="boton('pacientes')" >Tabla de pacientes</button>
+            <button type="button" class="btn btn-outline-primary" (click)="seleccionarTabla('administradores')" >Tabla de administradores</button>
+            <button type="button" class="btn btn-outline-primary" (click)="seleccionarTabla('especialistas')" >Tabla de especialistas</button>
+            <button type="button" class="btn btn-outline-primary" (click)="seleccionarTabla('pacientes')" >Tabla de pacientes</button>
         </div>
     </div>
     <div class="row">
@@ -18,12 +18,15 @@
             <app-tabla-pacientes></app-tabla-pacientes>
         </div>
     </div>
+
     <div class="row">
         <div class="col">
-            <button class="btn btn-primary btn-block" (click)="btnAgregar()">Agregar Usuario Administrador</button>
+            <button class="btn btn-primary btn-block mb-4" (click)="btnAgregar()">Agregar Usuario Administrador</button>
         </div>
     </div>
     <div class="row" *ngIf="agregarUsuario">
-        <app-registro [tipoUsuario]="'administrador'"></app-registro>
+        <div class="container">
+            <app-registro [tipoUsuario]="'administrador'"></app-registro>
+        </div>
     </div>
 </div>
