--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,41 +1,60 @@
 <div class="container" style="margin-bottom: 5em;">
-    <form [formGroup]="formulario" (ngSubmit)="enviar()">
 
-        <div class="mb-3">
-            <label for="mail" class="form-label">Mail</label>
-            <input type="email" class="form-control" id="mail" placeholder="Mail" formControlName='mail'>
-            <small class="invalid"
-                *ngIf="formulario.controls.mail.errors?.required  && formulario.controls.mail.touched">
-                El mail es requerido</small>
-            <small class="invalid" *ngIf="formulario.controls.mail.errors?.validadorDeEspacios">
-                El mail no puede contener espacios</small>
+    <div class="shadow p-3 mb-5 bg-body rounded">
+
+        <div class="col">
+
+            <div class="row" align="center">
+                <h1>INGRESO</h1>
+            </div>
+
+            <div class="row ">
+                <div class="container " align="center" >
+                    <img src="./assets/icono.png" style="border-radius: 50%;" width="150px" height="150px">
+                </div>
+            </div>
+            <div class="row">
+
+                <form [formGroup]="formulario" (ngSubmit)="enviar()">
+                    <div class="mb-3">
+                        <label for="mail" class="form-label">Mail</label>
+                        <input type="email" class="form-control" id="mail" placeholder="Mail" formControlName='mail'>
+                        <small class="invalid"
+                            *ngIf="formulario.controls.mail.errors?.required  && formulario.controls.mail.touched">
+                            El mail es requerido</small>
+                        <small class="invalid" *ngIf="formulario.controls.mail.errors?.validadorDeEspacios">
+                            El mail no puede contener espacios</small>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="password">Contraseña</label>
+                        <input type="password" class="form-control" id="password" placeholder="Contraseña"
+                            formControlName='password'>
+                        <small class="invalid"
+                            *ngIf="formulario.controls.password.errors?.required  && formulario.controls.password.touched">
+                            La contraseña es requerida</small>
+                        <small class="invalid"
+                            *ngIf="formulario.controls.password.errors?.minLength  && formulario.controls.password.touched">
+                            La contraseña debe tener al menos 6 caracteres
+                        </small>
+                    </div>
+
+                    <div class="col-md-12 d-grid gap-2 mb-3">
+                        <button type="submit" class="bttn-pill bttn-md bttn-success">Enviar</button>
+                    </div>
+                </form>
+                
+                <div class="col-md-12 d-grid gap-2">
+                    <button class="bttn-unite bttn-md bttn-primary" (click)="ingresaAdministrador()" >Administrador</button>
+                    <button class="bttn-unite bttn-md bttn-primary" (click)="ingresaEspecialista()" >Especialista</button>
+                    <button class="bttn-unite bttn-md bttn-primary" (click)="ingresaPaciente()" >Paciente</button>
+                </div>  
+
+            </div>
         </div>
 
-        <div class="mb-3">
-            <label for="password">Contraseña</label>
-            <input type="password" class="form-control" id="password" placeholder="Contraseña"
-                formControlName='password'>
-            <small class="invalid"
-                *ngIf="formulario.controls.password.errors?.required  && formulario.controls.password.touched">
-                La contraseña es requerida</small>
-            <small class="invalid"
-                *ngIf="formulario.controls.password.errors?.minLength  && formulario.controls.password.touched">
-                La contraseña debe tener al menos 6 caracteres
-            </small>
-        </div>
+    </div>
 
-        <div class="col-md-12 d-grid gap-2 mb-3">
-            <button type="submit" class="btn btn-primary btn-block">
-                Enviar
-            </button>
-        </div>
-    </form>
-    
-    <div class="col-md-12 d-grid gap-2">
-        <button type="button" name="" id="" class="btn btn-secondary" (click)="ingresaAdministrador()">Administrador</button>
-        <button type="button" name="" id="" class="btn btn-tertiary" (click)="ingresaEspecialista()" >Especialista</button>
-        <button type="button" name="" id="" class="btn btn-secondary" (click)="ingresaPaciente()">Paciente</button>
-    </div>  
 
 </div>
 
