--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -2,12 +2,12 @@
     color: red;
 }
 
-#mail,
-#password,
-.contenedor{
+.miContenedor{
     border-radius: 25px;
     border: 2px solid rgb(40, 183, 141);
     /* padding: 20px;  */
     /* width: 200px; */
     /* height: 15px;     */
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
