--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -1,11 +1,18 @@
-<div class="container" style="margin-bottom: 5em; max-width: 720px;">
+<div class="container" style="max-width: 720px;">
+
+  <div class="miContenedor p-3 mb-5" style="padding: 50px">
+    <div class="row">
+      <h1 style="font-family: 'Bebas Neue';" align="center">Registro {{tipoUsuario}}</h1>
+      <hr>
+    </div>
 
   <form [formGroup]="formulario" (ngSubmit)="enviar()">
     <div class="row">
 
-        <div class="mb-3">
-          <label for="nombre" class="form-label">Nombre</label>
-          <input type="text" class="form-control" id="nombre" placeholder="Nombre" formControlName='nombre'>
+        <div class="form-floating mb-3">
+          <input type="text" class="form-control miContenedor" id="nombre" placeholder="Nombre" formControlName='nombre'>
+          <label for="nombre" class="form-label" style="margin-left: 10px;">Nombre</label>
+          
           <small class="invalid"
             *ngIf="formulario.controls.nombre.errors?.required  && formulario.controls.nombre.touched">El nombre es
             requerido</small>
@@ -13,9 +20,10 @@
             contener espacios</small>
         </div>
 
-        <div class="mb-3">
-          <label for="apellido" class="form-label">Apellido</label>
-          <input type="text" class="form-control" id="apellido" placeholder="Apellido" formControlName='apellido'>
+        <div class="form-floating mb-3">
+          <input type="text" class="form-control miContenedor" id="apellido" placeholder="Apellido" formControlName='apellido'>
+          <label for="apellido" class="form-label" style="margin-left: 10px;">Apellido</label>
+          
           <small class="invalid"
             *ngIf="formulario.controls.apellido.errors?.required  && formulario.controls.apellido.touched">El apellido es
             requerido</small>
@@ -23,9 +31,10 @@
             contener espacios</small>
         </div>
 
-        <div class="mb-3">
-          <label for="edad" class="form-label">Edad</label>
-          <input type="number" class="form-control" id="edad" placeholder="Edad" formControlName='edad'>
+        <div class="form-floating mb-3">
+          <input type="number" class="form-control miContenedor" id="edad" placeholder="Edad" formControlName='edad'>
+          <label for="edad" class="form-label" style="margin-left: 10px;">Edad</label>
+          
           <small class="invalid"
             *ngIf="formulario.controls.edad.errors?.required && formulario.controls.edad.touched">La edad es
             requerida</small>
@@ -33,18 +42,20 @@
             *ngIf="formulario.controls.edad.errors?.min || formulario.controls.edad.errors?.max">La edad debe estar entre 0 y 150 años</small>
         </div>
 
-        <div class="mb-3">
-          <label for="dni" class="form-label">DNI</label>
-          <input type="number" class="form-control" id="dni" placeholder="DNI" formControlName='dni'>
+        <div class="form-floating mb-3">
+          <input type="number" class="form-control miContenedor" id="dni" placeholder="DNI" formControlName='dni'>
+          <label for="dni" class="form-label" style="margin-left: 10px;">DNI</label>
+          
           <small class="invalid" *ngIf="formulario.controls.dni.errors?.required && formulario.controls.dni.touched">El
             DNI es requerido</small>
           <small class="invalid" *ngIf="formulario.controls.dni.errors?.min || formulario.controls.dni.errors?.max">Debe
             estar entre 1 y 99 millones</small>
         </div>
 
-        <div class="mb-3">
-          <label for="mail" class="form-label">Mail</label>
-          <input type="mail" class="form-control" id="mail" placeholder="Mail" formControlName='mail'>
+        <div class="form-floating mb-3">
+          <input type="mail" class="form-control miContenedor" id="mail" placeholder="Mail" formControlName='mail'>
+          <label for="mail" class="form-label" style="margin-left: 10px;">Mail</label>
+
           <small class="invalid"
             *ngIf="formulario.controls.mail.errors?.required  && formulario.controls.mail.touched">El mail es
             requerido</small>
@@ -52,9 +63,10 @@
             espacios</small>
         </div>
 
-        <div class="mb-3">
-          <label for="password">Contraseña</label>
-          <input type="password" class="form-control" id="password" placeholder="Contraseña" formControlName='password'>
+        <div class="form-floating mb-3">
+          <input type="password" class="form-control miContenedor" id="password" placeholder="Contraseña" formControlName='password'>
+          <label for="password" style="margin-left: 10px;">Contraseña</label>
+
           <small class="invalid" 
             *ngIf="formulario.controls.password.errors?.required  && formulario.controls.password.touched">La contraseña
             es requerida</small>
@@ -66,22 +78,23 @@
 
         <!-- HASTA ACA LO TIENEN LOS 2 FORMS -->
 
-        <div *ngIf="tipoUsuario=='paciente'" >
-          <div class="mb-3">
-            <label for="obrasocial" class="form-label">Obra social</label>
-            <input type="text" class="form-control" id="obrasocial" placeholder="Obra Social"
-              formControlName='obrasocial'>
-            <small class="invalid"
-              *ngIf="formulario.controls.obrasocial.errors?.required  && formulario.controls.obrasocial.touched">La obra social
-              es requerida</small>
-          </div>
+        <div class="form-floating mb-3" *ngIf="tipoUsuario=='paciente'">
+          <input type="text" class="form-control miContenedor" id="obrasocial" placeholder="Obra Social"
+          formControlName='obrasocial'>
+          <label for="obrasocial" style="margin-left: 10px;">Obra social</label>
+
+          <small class="invalid"
+            *ngIf="formulario.controls.obrasocial.errors?.required  && formulario.controls.obrasocial.touched">La obra social
+            es requerida</small>
         </div>
 
         <div *ngIf="tipoUsuario=='especialista'">
           <div class="form-group mb-3">
-            <label for="especialidad" class="form-label" >Especialidad</label>
-            <select class="form-control" id="especialidad">
-              <option value="cirujano" selected >Cirujano</option>
+            <!-- <label for="especialidad" class="form-label" style="margin-left: 10px;">Especialidad</label> -->
+            
+            <select class="form-control miContenedor" id="especialidad">
+              <option value="" selected >Especialidad</option>
+              <option value="cirujano" >Cirujano</option>
               <option value="dentista" >Dentista</option>
               <option value="oftalmologo">Oftalmologo</option>
             </select>
@@ -90,11 +103,11 @@
 
 
         <div>
-          <label for="imagen">Foto de Perfil</label>
-          <input type="file"  class="form-control mb-3 " id="imagen" formControlName='imagen'>
+          <label for="imagen" class="form-label" style="margin-left: 10px;">Foto de Perfil</label>
+          <input type="file"  class="form-control mb-3 miContenedor" id="imagen" formControlName='imagen'>
         </div>
         <div *ngIf="tipoUsuario=='paciente'">
-          <input type="file" class="form-control mb-3" id="imagen2" formControlName='imagen2'>
+          <input type="file" class="form-control mb-3 miContenedor" id="imagen2" formControlName='imagen2'>
         </div>
 
       
@@ -103,9 +116,10 @@
     </div>  <!--Cierre ROW-->
 
     <div class="col-md-12 d-grid gap-2">
-      <button type="submit" class="btn btn-primary btn-block" [disabled]="!formulario.valid" >
+      <button type="submit" class="bttn-pill bttn-md bttn-success" [disabled]="!formulario.valid">Registrar</button>
+      <!-- <button type="submit" class="btn btn-primary btn-block" [disabled]="!formulario.valid" >
         Enviar
-      </button>
+      </button> -->
     </div>
 
   </form>
@@ -122,5 +136,6 @@
 
   <ngx-loading [show]="loading"  [config]="{ backdropBorderRadius: '3px', fullScreenBackdrop: true }" ></ngx-loading>
 
+  </div>  
 
 </div>
