--- a/src/app/pages/bienvenida/bienvenida.component.html
+++ b/src/app/pages/bienvenida/bienvenida.component.html
@@ -1,11 +1,11 @@
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-        <h1 class="display-3">Fluid jumbo heading</h1>
+        <h1 class="display-3">PAGINA DE BIENVENIDA</h1>
         <p class="lead">Jumbo helper text</p>
         <hr class="my-2">
         <p>More info</p>
-        <p class="lead">
-            <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button">Jumbo action name</a>
-        </p>
+        <button class="bttn-pill bttn-md bttn-primary">Ir a Login</button>
+        <button class="bttn-pill bttn-md bttn-primary">Ir a Registro</button>
+
     </div>
 </div>
