mejoro el rendimiento cargando los empleados solo una vez en el servicio

--- a/src/app/components/usuarios/tabla-administradores/tabla-administradores.component.html
+++ b/src/app/components/usuarios/tabla-administradores/tabla-administradores.component.html
@@ -13,7 +13,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let item of arrayAdministradores; let i = index">
+            <tr *ngFor="let item of afs.arrayAdministradores; let i = index">
                 <td scope="row">{{item.data.nombre}}</td>
                 <td>{{item.data.apellido}}</td>
                 <td>{{item.data.dni}}</td>
