--- a/src/app/components/usuarios/tabla-pacientes/tabla-pacientes.component.html
+++ b/src/app/components/usuarios/tabla-pacientes/tabla-pacientes.component.html
@@ -14,7 +14,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let item of arrayPacientes; let i = index">
+            <tr *ngFor="let item of afs.arrayPacientes; let i = index">
                 <td scope="row">{{item.data.nombre}}</td>
                 <td>{{item.data.apellido}}</td>
                 <td>{{item.data.dni}}</td>
