--- a/src/app/components/usuarios/tabla-especialistas/tabla-especialistas.component.html
+++ b/src/app/components/usuarios/tabla-especialistas/tabla-especialistas.component.html
@@ -15,7 +15,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let item of arrayEspecialistas; let i = index">
+            <tr *ngFor="let item of afs.arrayEspecialistas; let i = index">
                 <td scope="row">{{item.data.nombre}}</td>
                 <td>{{item.data.apellido}}</td>
                 <td>{{item.data.dni}}</td>
