abriendo branch de produccion

--- a/src/app/pages/bienvenida/bienvenida.component.html
+++ b/src/app/pages/bienvenida/bienvenida.component.html
@@ -4,8 +4,8 @@
         <p class="lead">Jumbo helper text</p>
         <hr class="my-2">
         <p>More info</p>
-        <button class="bttn-pill bttn-md bttn-primary">Ir a Login</button>
-        <button class="bttn-pill bttn-md bttn-primary">Ir a Registro</button>
+        <button class="bttn-pill bttn-md bttn-primary" (click)="goToLogin()" >Ir a Login</button>
+        <button class="bttn-pill bttn-md bttn-primary" (click)="goToRegistro()" >Ir a Registro</button>
 
     </div>
 </div>
