--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,6 +13,7 @@
                 <div *ngIf="auth.currentUser">
                     <a *ngIf="auth.currentUser.perfil == 'administrador'" class="nav-link " aria-current="page" (click)="goToUsuarios()" >Usuarios</a>
                 </div>
+                <a class="nav-link " aria-current="page" (click)="goToMisTurnos()" >Mis turnos</a>
 
             </div>
             <label *ngIf="auth.currentUser" align="right" for="" style="color: white;">{{auth.currentUser.mail}}</label>
