--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="margin: 50px; max-width: 720px;">
+<div class="container mt-5" style="max-width: 720px;">
 
     <div class="miContenedor p-3 mb-5" style="padding: 50px">
         <div class="col">
