--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,6 +14,7 @@
                     <a *ngIf="auth.currentUser.perfil == 'administrador'" class="nav-link " aria-current="page" (click)="goToUsuarios()" >Usuarios</a>
                 </div>
                 <a class="nav-link " aria-current="page" (click)="goToMisTurnos()" >Mis turnos</a>
+                <a class="nav-link " aria-current="page" (click)="goToMiPerfil()" >Mi Perfil</a>
 
             </div>
             <label *ngIf="auth.currentUser" align="right" for="" style="color: white;">{{auth.currentUser.mail}}</label>
