--- a/src/app/components/usuarios/tabla-pacientes/tabla-pacientes.component.html
+++ b/src/app/components/usuarios/tabla-pacientes/tabla-pacientes.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
 
     <table class="table text-center">
         <thead>
@@ -14,7 +14,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let item of afs.arrayPacientes; let i = index">
+            <tr *ngFor="let item of afs.arrayPacientes; let i = index" (click)="mostrar(i)">
                 <td scope="row">{{item.data.nombre}}</td>
                 <td>{{item.data.apellido}}</td>
                 <td>{{item.data.dni}}</td>
