hecha tablas de misturnos sin funcionalidad

--- a/src/app/components/turnos/turnospaciente/turnospaciente.component.html
+++ b/src/app/components/turnos/turnospaciente/turnospaciente.component.html
@@ -1,69 +1,2 @@
-<div class="container-fluid" align="center">
-
-    <div class="row" align="center">
-        
-        <div class="col-6">
-            <div class="row">
-                <h2>ESPECIALIDAD</h2>
-            </div>
-            <div class="row p-1" *ngFor="let item of afs.listaEspecialidades, let i as index">
-                <button (click)="seleccionaEspecialidad(i)" id={{i}} class="bttn-unite bttn-md bttn-primary">{{item}} </button>
-                
-            </div>
-        </div>
-
-        <div class="col-6">
-            <div class="row">
-                <h2>ESPECIALISTAS</h2>
-            </div>
-            <div class="row p-1" *ngFor="let item of listaEspecialistas, let i as index">
-                <button (click)="seleccionaEspecialista(i)"  id={{i}}  class="bttn-unite bttn-md bttn-primary">{{item.data.nombre}} {{item.data.apellido}} </button>
-            </div>
-        </div>
-
-    </div> <!--Cierre primer row ESPECIALIDADES/ESPECIALISTAS-->
-
-    <div class="row" align="center">
-
-        <div class="col-6">
-
-            <div class="row">
-                <h2>Dias que trabaja</h2>
-            </div>
-            <div class="row p-1" *ngFor="let item of listadoDias, let i as index">
-                <div *ngIf="item.dia;else templateName">
-                    <h4>{{item.dia}}</h4>
-                </div>
-                <ng-template #templateName>
-                    <button (click)="seleccionaDia(i)" id={{i}} class="bttn-unite bttn-md bttn-primary">{{item}} </button>
-                </ng-template>
-            </div>
-            
-        </div>
-
-        <div class="col-6">
-
-            <div class="row">
-                <h2>Horarios disponibles</h2>
-            </div>
-            <div class="row">
-                <div *ngFor="let item of horariosAtencion, let i as index" class="col-6 p-1">
-                    <div *ngIf="item == 'No hay turnos disponibles';else pedrito">
-                        <h2>{{item}}</h2>
-                    </div>
-                    <ng-template #pedrito>
-                        <button (click)="seleccionaHorario(i)"  class="bttn-unite bttn-md bttn-primary w-100">{{item}}hs </button>
-                    </ng-template>
-                </div>
-            </div>
-
-        </div>
-
-    </div> <!--Cierre segundo row  DIAS/HORARIOS-->
-
-
-</div>
-
-
-
+<app-detallesturno></app-detallesturno>
 <ngx-loading [show]="loading"  [config]="{ backdropBorderRadius: '3px', fullScreenBackdrop: true }" ></ngx-loading>
