--- a/src/app/components/turnos/turnosespecialista/turnosespecialista.component.html
+++ b/src/app/components/turnos/turnosespecialista/turnosespecialista.component.html
@@ -1,1 +1,39 @@
-<p>turnosespecialista works!</p>
+<div class="container">
+
+    <div class="row">
+        <div class="col">
+            <button type="button" (click)="filtrarPor('Falcioni, Facundo')" class="btn btn-primary">Filtrar</button>
+        </div>
+    </div>
+
+    <div class="row" >
+        <div class="col">
+            <table class="table-dark table-striped table-hover">
+                <thead>
+                    <th>Especialidad</th>
+                    <th>Paciente</th>
+                    <th>Fecha</th>
+                    <th>Horario</th>
+                    <th>Estado</th>
+                    <th>Acciones</th>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let item of turnosDelEspecialista">
+                        <td>{{item.data.especialidad}} </td>
+                        <td>{{item.data.paciente}} </td>
+                        <td>{{item.data.fecha}} </td>
+                        <td>{{item.data.horario}}hs </td>
+                        <td>{{item.data.estado}} </td>
+                        <td *ngIf="item.data.estado == 'pendiente'" > <button type="button" class="btn btn-outline-danger">Cancelar</button> </td>
+                        <td *ngIf="item.data.estado == 'pendiente'" ><button type="button" class="btn btn-outline-warning">Rechazar</button></td>
+                        <td *ngIf="item.data.estado == 'pendiente'" ><button type="button" class="btn btn-outline-success">Aceptar</button></td>
+                        <td *ngIf="item.data.estado == 'aceptado'" ><button type="button" class="btn btn-outline-success">Finalizar</button></td>
+                        <td *ngIf="item.data.comentario" ><button type="button" class="btn btn-outline-info">Ver reseña</button></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
+<button (click)="cargarTurnos()">CargarTurnos</button>
