--- a/src/app/components/turnos/turnosespecialista/turnosespecialista.component.html
+++ b/src/app/components/turnos/turnosespecialista/turnosespecialista.component.html
@@ -8,7 +8,7 @@
 
     <div class="row" >
         <div class="col">
-            <table >
+            <table class="table table-secondary table-striped table-hover" >
                 <thead>
                     <th>Especialidad</th>
                     <th>Paciente</th>
