--- a/src/app/components/turnos/turnosespecialista/turnosespecialista.component.html
+++ b/src/app/components/turnos/turnosespecialista/turnosespecialista.component.html
@@ -1,18 +1,18 @@
 <div class="container">
 
     <div class="row">
-        <div class="col-3 p3">
-            <h3>Filtrar por paciente: </h3>
+        <div class="col-3 m-3">
+            <h5>Filtrar por paciente: </h5>
         </div>
-        <div class="col-3 p3" *ngFor="let item of pacientesFiltrados">
-            <button type="button" (click)="filtrarPor(item)" class="btn btn-primary">{{item}}</button>
+        <div class="col-3 m-3" *ngFor="let item of pacientesFiltrados">
+            <button type="button" (click)="filtrarPorPaciente(item)" class="btn btn-primary">{{item}}</button>
         </div>
     </div>
     <div class="row">
-        <div class="col-3 p3">
-            <h3>Filtrar por especialidad: </h3>
+        <div class="col-3 m-3">
+            <h5>Filtrar por especialidad: </h5>
         </div>
-        <div class="col-3 p3" *ngFor="let item of especialidadesFiltradas">
+        <div class="col-3 m-3" *ngFor="let item of especialidadesFiltradas">
             <button type="button" (click)="filtrarPorEspecialidad(item)" class="btn btn-primary">{{item}}</button>
         </div>
     </div>
@@ -46,6 +46,3 @@
         </div>
     </div>
 </div>
-
-<button (click)="paraFiltrar()">PEDRO</button>
-<button (click)="paraFiltrarEspecialidades()">PEDRO</button>
